force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/ucinn_ascendv2__Transaction_Data__c.object-meta.xml
<CustomObject>
    <description>Stores transaction attempts.</description>
    <label>Transaction Data</label>
    <nameField>
        <label>Transaction Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>