force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Organization that this Transaction is tied to.</description>
    <inlineHelpText>Organization that this Transaction is tied to.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transaction Data</relationshipLabel>
    <relationshipName>Transaction_Data</relationshipName>
    <type>Lookup</type>
</CustomField>