force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Account_Token__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Token__c</fullName>
    <description>Depending on the external payment provider: token representing a specific merchant account for this Transaction to target.</description>
    <inlineHelpText>Depending on the external payment provider: token representing a specific merchant account for this Transaction to target.</inlineHelpText>
    <label>Account Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>