force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Authorized_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Authorized_Date__c</fullName>
    <description>Date and time when transaction was processed.</description>
    <inlineHelpText>Date and time when transaction was processed.</inlineHelpText>
    <label>Authorized Date</label>
    <type>DateTime</type>
</CustomField>