force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Constituent that the Transaction data is tied to.</description>
    <inlineHelpText>Constituent that the Transaction data is tied to.</inlineHelpText>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transaction Data</relationshipLabel>
    <relationshipName>Transaction_Data</relationshipName>
    <type>Lookup</type>
</CustomField>