force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Gift_or_Pledge__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_or_Pledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gift that the Transaction Data is linked to.</description>
    <inlineHelpText>Gift that the Transaction Data is linked to.</inlineHelpText>
    <label>Gift or Pledge</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transaction Data</relationshipLabel>
    <relationshipName>Transaction_Data</relationshipName>
    <type>Lookup</type>
</CustomField>