force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Is_Success__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that the transaction attempt was successful.</description>
    <inlineHelpText>Denotes that the transaction attempt was successful.</inlineHelpText>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>