force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Merchant_Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Merchant_Reference_Code__c</fullName>
    <description>ID from merchant that is used to link records to transactions in CyberSource.</description>
    <inlineHelpText>ID from merchant that is used to link records to transactions in CyberSource.</inlineHelpText>
    <label>Merchant Reference Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>