force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Message__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Message__c</fullName>
    <description>Message in regards to the success or failure of the transaction data.</description>
    <inlineHelpText>Message in regards to the success or failure of the transaction data.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>