force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Payment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>ucinn_ascendv2__Payment__c</referenceTo>
    <relationshipLabel>Transaction Data</relationshipLabel>
    <relationshipName>Transaction_Data</relationshipName>
    <type>Lookup</type>
</CustomField>