force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Payment_Network_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Network_Transaction_ID__c</fullName>
    <description>Network Transaction ID of the payment used for performing merchant-initiated transactions in the future.</description>
    <inlineHelpText>Network Transaction ID of the payment used for performing merchant-initiated transactions in the future.</inlineHelpText>
    <label>Payment Network Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>