force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Reason_Code__c</fullName>
    <description>Code that denotes a success or failure from the external payment gateway.</description>
    <inlineHelpText>Code that denotes a success or failure from the external payment gateway.</inlineHelpText>
    <label>Reason Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>