force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Request__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Request__c</fullName>
    <description>Request that was sent to Cybersource</description>
    <inlineHelpText>Request that was sent to Cybersource</inlineHelpText>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>