force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Request_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Request_ID__c</fullName>
    <description>Request ID of the transaction used to perform the charge at a later stage.</description>
    <inlineHelpText>Request ID of the transaction used to perform the charge at a later stage.</inlineHelpText>
    <label>Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>