force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Response__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Response__c</fullName>
    <description>Response received from Cybersource</description>
    <inlineHelpText>Response received from Cybersource</inlineHelpText>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>