force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Session__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Session that the transaction is tied to.</description>
    <inlineHelpText>Session that the transaction is tied to.</inlineHelpText>
    <label>Session</label>
    <referenceTo>ucinn_ascendv2__Session__c</referenceTo>
    <relationshipLabel>Transaction Data</relationshipLabel>
    <relationshipName>Transaction_Data</relationshipName>
    <type>Lookup</type>
</CustomField>