force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Subscription_ID__c</fullName>
    <description>Subscription ID that is a reference to a constituent&apos;s payment information stored on an external payment gateway.</description>
    <inlineHelpText>Subscription ID that is a reference to a constituent&apos;s payment information stored on an external payment gateway.</inlineHelpText>
    <label>Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>