force-app/main/default/objects/ucinn_ascendv2__Transaction_Data__c/fields/ucinn_ascendv2__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Transaction_Type__c</fullName>
    <description>Type of attempted transaction.</description>
    <inlineHelpText>Type of attempted transaction.</inlineHelpText>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>